@@ -119,11 +119,14 @@ static int mem_size_rec( value v,  vtree **l ) {
 		}
 	case VAL_ABSTRACT:
 		{
-			int t = sizeof(vabstract);
+			int t;
+			if( mem_cache(v,l) )
+				return 0;
+			t = sizeof(vabstract);
 			if( val_kind(v) == neko_kind_module )
 				t += mem_module((neko_module*)val_data(v),l);
 			else if( val_kind(v) == k_hash ) {
-				vhash *h = (vhash*)val_data(v);				
+				vhash *h = (vhash*)val_data(v);
 				int i;
 				t += sizeof(vhash);
 				t += sizeof(hcell*) * h->ncells;
@@ -136,7 +139,7 @@ static int mem_size_rec( value v,  vtree **l ) {
 						c = c->next;
 					}
 				}
-			}	
+			}
 			return t;
 		}
 	default:
@@ -183,6 +186,24 @@ static value mem_size( value v ) {
 	return alloc_int(mem_size_rec(v,&t));
 }
 
+/**
+	mem_local_size : any -> any array -> int
+	<doc>Calculate the quite precise amount of VM memory reachable from this value, without scanning the values contained in the array.</doc>
+**/
+static value mem_local_size( value v, value a ) {
+	vtree *t = NULL;
+	int i;
+	val_check(a,array);
+	for(i=0;i<val_array_size(a);i++) {
+		value k = val_array_ptr(a)[i];
+		mem_cache(k,&t);
+		if( val_is_abstract(k) && val_kind(k) == neko_kind_module )
+			mem_cache(val_data(k),&t);
+	}
+	return alloc_int(mem_size_rec(v,&t));
+}
+
 DEFINE_PRIM(mem_size,1);
+DEFINE_PRIM(mem_local_size,2);
 
 /* ************************************************************************ */
